# recoverer

./: .gitignore  README.md
.cargo/: config.toml
docs/: Dockerfile  index.html  nginx.conf
docs/superpowers/plans/: 2026-03-28-plan-1-rust-engine.md
docs/superpowers/specs/: 2026-03-28-recoverer-design.md
engine/: Cargo.toml
engine/src/: commands.rs  error.rs  events.rs  filetype.rs  lib.rs  main.rs  pipe.rs  recovery.rs  sessions.rs  store.rs
engine/src/scan/: carver.rs  fat.rs  mod.rs  ntfs.rs  orchestrator.rs  signatures.rs  volume.rs  vss.rs
engine/tests/: test_carver.rs  test_filetype.rs  test_integration.rs  test_ntfs.rs  test_protocol.rs  test_recovery.rs  test_signatures.rs  test_store.rs  test_volume.rs
scripts/: gen_demo_gif.py
ui/Recoverer/: App.xaml  App.xaml.cs  Directory.Build.props  MainWindow.xaml  MainWindow.xaml.cs  Recoverer.csproj
ui/Recoverer.Tests/: CommandsTests.cs  EngineEventTests.cs  PipeProtocolTests.cs  Recoverer.Tests.csproj
ui/Recoverer/Controls/: CategoryRow.xaml  CategoryRow.xaml.cs  ConfidenceDots.xaml  ConfidenceDots.xaml.cs  FilePreviewPanel.xaml  FilePreviewPanel.xaml.cs
ui/Recoverer/Converters/: BoolConverters.cs  FileSizeConverter.cs
ui/Recoverer/Models/: Commands.cs  EngineEvent.cs
ui/Recoverer/Services/: EngineBootstrap.cs  EngineProcess.cs  PipeClient.cs
ui/Recoverer/ViewModels/: MainViewModel.cs  RecoveryViewModel.cs  ResultsViewModel.cs  ScanningViewModel.cs  SetupViewModel.cs
ui/Recoverer/Views/: RecoveryPage.xaml  RecoveryPage.xaml.cs  ResultsPage.xaml  ResultsPage.xaml.cs  ScanningPage.xaml  (+3 more)
