[package]
name = "recoverer-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recoverer-engine"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
infer = "0.16"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_System_SystemInformation",
] }

[dev-dependencies]
tempfile = "3"
